# bookstore

./: pyproject.toml
bookstore/: settings.py
order/: factories.py  tests.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/serializers/: order_serializer.py
order/viewsets/: order_viewset.py
product/: admin.py  factories.py  tests.py
product/migrations/: 0001_initial.py
product/models/: category.py
product/serializers/: product_serializer.py
product/viewsets/: product_viewset.py
